--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
 
 body {
     background-color: var(--mantine-color-mint);
+    overflow: hidden;
 }
 
 html, body {
